# IT8297-rgb-controller

./: .gitignore  .gitmodules  CMakeLists.txt  build-external-static.sh  build-macos-brew.sh  build-macos-ports.sh  build.sh  packets_captures.txt.h  rgblights.sln
Demo/: BeatDetektor.cpp  BeatDetektor.h  Demo.cpp  Demo.vcxproj  Demo.vcxproj.filters  LiquidColorGenerator.cpp  LiquidColorGenerator.hpp  PulseAudioSoundManager.cpp  PulseAudioSoundManager.hpp  SoundManagerBase.cpp  SoundManagerBase.hpp  Window.h  cpu.cpp  cpu.h  cpu_win32.cpp  dbusmgr.cpp  dbusmgr.h  wgetopt.c
Demo/libbeat/: beatanalyser.cpp  beatanalyser.h  fft.cpp  fft.h  subband.cpp  subband.h
Demo/onsetsds/: onsetsds.c
python/: test.py
python/it8297/: __init__.py  base.py  controller_hidapi.py  controller_libusb.py
rgblights/: Window.h  main.cpp  resource.h  rgblights.cpp  rgblights.def  rgblights.h  rgblights.rc  rgblights.vcxproj  rgblights.vcxproj.filters
udev/: 99-it8297.rules
